// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icons > Activity icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M3 12h3l3-8 4 16 3-8h4"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`Icons > Activity icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M3 12h3l3-8 4 16 3-8h4"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`Icons > Camera icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    clip-rule="evenodd"
    d="M4 5a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V7a2 2 0 00-2-2h-1.586a1 1 0 01-.707-.293l-1.121-1.121A2 2 0 0011.172 3H8.828a2 2 0 00-1.414.586L6.293 4.707A1 1 0 015.586 5H4zm6 9a3 3 0 100-6 3 3 0 000 6z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > Camera icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    clip-rule="evenodd"
    d="M4 5a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V7a2 2 0 00-2-2h-1.586a1 1 0 01-.707-.293l-1.121-1.121A2 2 0 0011.172 3H8.828a2 2 0 00-1.414.586L6.293 4.707A1 1 0 015.586 5H4zm6 9a3 3 0 100-6 3 3 0 000 6z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > CheckCircle icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M12 2a10 10 0 100 20 10 10 0 000-20zm4.3 7.3l-4.99 5a1 1 0 01-1.42 0l-2.5-2.5a1 1 0 111.42-1.42l1.79 1.79L14.88 7.7a1 1 0 111.42 1.42z"
  />
</svg>
`;

exports[`Icons > CheckCircle icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M12 2a10 10 0 100 20 10 10 0 000-20zm4.3 7.3l-4.99 5a1 1 0 01-1.42 0l-2.5-2.5a1 1 0 111.42-1.42l1.79 1.79L14.88 7.7a1 1 0 111.42 1.42z"
  />
</svg>
`;

exports[`Icons > ChevronRight icon > renders correctly at 12px 1`] = `
<svg
  aria-hidden="true"
  fill="currentColor"
  height="12"
  viewBox="0 0 20 20"
  width="12"
>
  <path
    clip-rule="evenodd"
    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > ChevronRight icon > renders correctly at 24px 1`] = `
<svg
  aria-hidden="true"
  fill="currentColor"
  height="24"
  viewBox="0 0 20 20"
  width="24"
>
  <path
    clip-rule="evenodd"
    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > Circle icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <circle
    cx="12"
    cy="12"
    r="8"
  />
</svg>
`;

exports[`Icons > Circle icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <circle
    cx="12"
    cy="12"
    r="8"
  />
</svg>
`;

exports[`Icons > Cpu icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <rect
    height="10"
    rx="2"
    width="10"
    x="7"
    y="7"
  />
</svg>
`;

exports[`Icons > Cpu icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <rect
    height="10"
    rx="2"
    width="10"
    x="7"
    y="7"
  />
</svg>
`;

exports[`Icons > Dataset icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <rect
    height="8"
    rx="1.5"
    width="8"
    x="8"
    y="8"
  />
  <g
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  >
    <path
      d="M21 12a9 9 0 1 1-2.64-6.36L21 3"
    />
    <path
      d="M21 3v4h-4"
    />
  </g>
</svg>
`;

exports[`Icons > Dataset icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <rect
    height="8"
    rx="1.5"
    width="8"
    x="8"
    y="8"
  />
  <g
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  >
    <path
      d="M21 12a9 9 0 1 1-2.64-6.36L21 3"
    />
    <path
      d="M21 3v4h-4"
    />
  </g>
</svg>
`;

exports[`Icons > ExternalLink icon > renders correctly at 12px 1`] = `
<svg
  fill="none"
  height="12"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
  />
  <polyline
    points="15 3 21 3 21 9"
  />
  <line
    x1="10"
    x2="21"
    y1="14"
    y2="3"
  />
</svg>
`;

exports[`Icons > ExternalLink icon > renders correctly at 24px 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
  />
  <polyline
    points="15 3 21 3 21 9"
  />
  <line
    x1="10"
    x2="21"
    y1="14"
    y2="3"
  />
</svg>
`;

exports[`Icons > Home icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M3 9.5L12 3l9 6.5V21a1 1 0 01-1 1h-5v-7H9v7H4a1 1 0 01-1-1V9.5z"
  />
</svg>
`;

exports[`Icons > Home icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M3 9.5L12 3l9 6.5V21a1 1 0 01-1 1h-5v-7H9v7H4a1 1 0 01-1-1V9.5z"
  />
</svg>
`;

exports[`Icons > Layout icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M3 3h18v18H3V3zm4 4v10h10V7H7z"
  />
</svg>
`;

exports[`Icons > Layout icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M3 3h18v18H3V3zm4 4v10h10V7H7z"
  />
</svg>
`;

exports[`Icons > Loader icon > renders correctly at 12px 1`] = `
<svg
  fill="none"
  height="12"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`Icons > Loader icon > renders correctly at 24px 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M21 12a9 9 0 1 1-6.219-8.56"
  />
</svg>
`;

exports[`Icons > Pause icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M6 4h4v16H6V4zm8 0h4v16h-4V4z"
  />
</svg>
`;

exports[`Icons > Pause icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M6 4h4v16H6V4zm8 0h4v16h-4V4z"
  />
</svg>
`;

exports[`Icons > Pencil icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 20 20"
  width="12"
>
  <path
    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
  />
</svg>
`;

exports[`Icons > Pencil icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 20 20"
  width="24"
>
  <path
    d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
  />
</svg>
`;

exports[`Icons > Play icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 20 20"
  width="12"
>
  <path
    d="M6 4l10 6-10 6V4z"
  />
</svg>
`;

exports[`Icons > Play icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 20 20"
  width="24"
>
  <path
    d="M6 4l10 6-10 6V4z"
  />
</svg>
`;

exports[`Icons > Plus icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 20 20"
  width="12"
>
  <path
    d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
  />
</svg>
`;

exports[`Icons > Plus icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 20 20"
  width="24"
>
  <path
    d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
  />
</svg>
`;

exports[`Icons > RefreshCw icon > renders correctly at 12px 1`] = `
<svg
  fill="none"
  height="12"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M23 4v6h-6"
  />
  <path
    d="M1 20v-6h6"
  />
  <path
    d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
  />
</svg>
`;

exports[`Icons > RefreshCw icon > renders correctly at 24px 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M23 4v6h-6"
  />
  <path
    d="M1 20v-6h6"
  />
  <path
    d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"
  />
</svg>
`;

exports[`Icons > Robot icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M 11,6 V 5 c 0,0 0,-1 1,-1 v 0 c 0,0 1,0 1,1 v 1"
    fill="none"
    id="path17"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M 17,20 H 7 C 5,20 3,19 3,17 V 9 C 3,7 5,6 7,6 h 10 c 2,0 4,1 4,3 v 8 c 0,2 -2,3 -4,3 z"
    fill="none"
    id="path8"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="1"
  />
  <circle
    cx="15"
    cy="12"
    fill="none"
    id="ellipse8"
    r="1.5"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
  <circle
    cx="-9"
    cy="12"
    fill="none"
    id="ellipse9"
    r="1.5"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
    transform="rotate(-73.440702)"
  />
  <path
    d="m 2,16 v 0 C 1,16 1,16 1,15 v -4 c 0,-1 0,-1 1,-1 v 0 c 1,0 1,0 1,1 v 4 c 0,1 0,1 -1,1 z"
    fill="none"
    id="path11"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
  <path
    d="m 22,16 v 0 c 1,0 1,0 1,-1 v -4 c 0,-1 0,-1 -1,-1 v 0 c -1,0 -1,0 -1,1 v 4 c 0,1 0,1 1,1 z"
    fill="none"
    id="path12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icons > Robot icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M 11,6 V 5 c 0,0 0,-1 1,-1 v 0 c 0,0 1,0 1,1 v 1"
    fill="none"
    id="path17"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
  />
  <path
    d="M 17,20 H 7 C 5,20 3,19 3,17 V 9 C 3,7 5,6 7,6 h 10 c 2,0 4,1 4,3 v 8 c 0,2 -2,3 -4,3 z"
    fill="none"
    id="path8"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="1"
  />
  <circle
    cx="15"
    cy="12"
    fill="none"
    id="ellipse8"
    r="1.5"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
  <circle
    cx="-9"
    cy="12"
    fill="none"
    id="ellipse9"
    r="1.5"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
    transform="rotate(-73.440702)"
  />
  <path
    d="m 2,16 v 0 C 1,16 1,16 1,15 v -4 c 0,-1 0,-1 1,-1 v 0 c 1,0 1,0 1,1 v 4 c 0,1 0,1 -1,1 z"
    fill="none"
    id="path11"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
  <path
    d="m 22,16 v 0 c 1,0 1,0 1,-1 v -4 c 0,-1 0,-1 -1,-1 v 0 c -1,0 -1,0 -1,1 v 4 c 0,1 0,1 1,1 z"
    fill="none"
    id="path12"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-miterlimit="round"
    stroke-width="2"
  />
</svg>
`;

exports[`Icons > RobotConfiguration icon > renders correctly at 12px 1`] = `
<svg
  fill="none"
  height="12"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M14 6H7C5 6 3 7 3 9v8c0 2 2 3 4 3h10c2 0 4-1 4-3V13"
  />
  <circle
    cx="9"
    cy="12"
    fill="currentColor"
    r="1"
    stroke="none"
  />
  <circle
    cx="15"
    cy="12"
    fill="currentColor"
    r="1"
    stroke="none"
  />
  <path
    d="M19.5 10.1l-1.2-.7c-.3-.2-.6-.5-.7-.9l.6-1.3c.2-.4.1-1-.3-1.3l-1.4-.7c-.4-.2-1-.1-1.3.3l-.6 1.3c-.3.1-.7.1-1 0l-.6-1.3c-.2-.4-.8-.5-1.3-.3l-1.4.7c-.4.2-.5.8-.3 1.3l.6 1.3c-.2.3-.5.6-.9.7l-1.2.7c-.4.2-.6.8-.4 1.2l.7 1.4c.2.4.8.6 1.2.4l1.3-.6c.3.2.6.5.7.9l-.6 1.3c-.2.4-.1 1 .3 1.3l1.4.7c.2.1.4.1.6.1.3 0 .5-.1.7-.4l.6-1.3c.3-.1.7-.1 1 0l.6 1.3c.2.4.8.5 1.3.3l1.4-.7c.4-.2.5-.8.3-1.3l-.6-1.3c.2-.3.5-.6.9-.7l1.2-.7c.4-.2.6-.8.4-1.2l-.7-1.4c-.2-.4-.8-.6-1.2-.4z"
  />
  <circle
    cx="15.5"
    cy="10.5"
    r="1.5"
  />
</svg>
`;

exports[`Icons > RobotConfiguration icon > renders correctly at 24px 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M14 6H7C5 6 3 7 3 9v8c0 2 2 3 4 3h10c2 0 4-1 4-3V13"
  />
  <circle
    cx="9"
    cy="12"
    fill="currentColor"
    r="1"
    stroke="none"
  />
  <circle
    cx="15"
    cy="12"
    fill="currentColor"
    r="1"
    stroke="none"
  />
  <path
    d="M19.5 10.1l-1.2-.7c-.3-.2-.6-.5-.7-.9l.6-1.3c.2-.4.1-1-.3-1.3l-1.4-.7c-.4-.2-1-.1-1.3.3l-.6 1.3c-.3.1-.7.1-1 0l-.6-1.3c-.2-.4-.8-.5-1.3-.3l-1.4.7c-.4.2-.5.8-.3 1.3l.6 1.3c-.2.3-.5.6-.9.7l-1.2.7c-.4.2-.6.8-.4 1.2l.7 1.4c.2.4.8.6 1.2.4l1.3-.6c.3.2.6.5.7.9l-.6 1.3c-.2.4-.1 1 .3 1.3l1.4.7c.2.1.4.1.6.1.3 0 .5-.1.7-.4l.6-1.3c.3-.1.7-.1 1 0l.6 1.3c.2.4.8.5 1.3.3l1.4-.7c.4-.2.5-.8.3-1.3l-.6-1.3c.2-.3.5-.6.9-.7l1.2-.7c.4-.2.6-.8.4-1.2l-.7-1.4c-.2-.4-.8-.6-1.2-.4z"
  />
  <circle
    cx="15.5"
    cy="10.5"
    r="1.5"
  />
</svg>
`;

exports[`Icons > Settings icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M12 8a4 4 0 100 8 4 4 0 000-8zm7.4 3a6.5 6.5 0 01-.1 1l2 1.5-2 3.5-2.1-1a6.4 6.4 0 01-1.2.7L15 20h-6l-.9-3.3c-.4-.2-.8-.5-1.2-.7L4.8 21 2.8 17.5l2-1.5a6.7 6.7 0 010-2l-2-1.5L4.8 8l2.1 1a6.4 6.4 0 011.2-.7L9 4h6l.9 3.3c.4.2.8.5 1.2.7l2.1-1L21.2 11z"
  />
</svg>
`;

exports[`Icons > Settings icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M12 8a4 4 0 100 8 4 4 0 000-8zm7.4 3a6.5 6.5 0 01-.1 1l2 1.5-2 3.5-2.1-1a6.4 6.4 0 01-1.2.7L15 20h-6l-.9-3.3c-.4-.2-.8-.5-1.2-.7L4.8 21 2.8 17.5l2-1.5a6.7 6.7 0 010-2l-2-1.5L4.8 8l2.1 1a6.4 6.4 0 011.2-.7L9 4h6l.9 3.3c.4.2.8.5 1.2.7l2.1-1L21.2 11z"
  />
</svg>
`;

exports[`Icons > Stop icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M6 6h12v12H6z"
  />
</svg>
`;

exports[`Icons > Stop icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M6 6h12v12H6z"
  />
</svg>
`;

exports[`Icons > XCircle icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    clip-rule="evenodd"
    d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > XCircle icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    clip-rule="evenodd"
    d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`Icons > Zap icon > renders correctly at 12px 1`] = `
<svg
  fill="currentColor"
  height="12"
  viewBox="0 0 24 24"
  width="12"
>
  <path
    d="M13 2L3 14h7l-1 8 10-12h-7l1-8z"
  />
</svg>
`;

exports[`Icons > Zap icon > renders correctly at 24px 1`] = `
<svg
  fill="currentColor"
  height="24"
  viewBox="0 0 24 24"
  width="24"
>
  <path
    d="M13 2L3 14h7l-1 8 10-12h-7l1-8z"
  />
</svg>
`;
